--- a/monitoring-AFB1-final result-submission.ipynb
+++ b/monitoring-AFB1-final result-submission.ipynb
@@ -99,7 +99,7 @@
    },
    "outputs": [],
    "source": [
-    "log_clf = LogisticRegression(random_state=42)#,C=0.00001,penalty='l2',)#{0:0.001,1:0.999},max_iter=1000,class_weight=\"balanced\"\n",
+    "log_clf = LogisticRegression(random_state=42)",
     "log_clf.fit(X_train_stander, y_train)\n",
     "y_pred = log_clf.predict(X_test_stander)\n",
     "y_pred_train = log_clf.predict(X_train_stander)\n",
@@ -129,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sgd_svm=SGDClassifier(random_state=42,loss='hinge')#,loss='hinge', n_iter_no_change=3,validation_fraction=0.1,class_weight=\"balanced\",early_stopping=True,max_iter=1000, tol=1e-3)\n",
+    "sgd_svm=SGDClassifier(random_state=42,loss='hinge')\n",
     "#CV\n",
     "sgd_svm.fit(X_train_stander, y_train)\n",
     "y_pred = sgd_svm.predict(X_test_stander)\n",
@@ -161,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dt_clf = DecisionTreeClassifier(random_state=42)#,max_depth=10,min_samples_leaf=3,class_weight=\"balanced\")\n",
+    "dt_clf = DecisionTreeClassifier(random_state=42)\n",
     "dt_clf.fit(X_train_stander, y_train)\n",
     "y_pred = dt_clf.predict(X_test_stander)\n",
     "y_pred_train = dt_clf.predict(X_train_stander)\n",
@@ -191,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xgb_clf = xgb.XGBClassifier(random_state=42)#,objective=\"binary:logistic\",gamma=1.0, learning_rate=0.1, max_depth=4,reg_lambda=10.0,scale_pos_weight=559,subsample=0.5)#subsample=0.9, scale_pos_weight=1000,max_depth=4)#,objective=\"binary:logistic\",gamma=1.0, learning_rate=0.1, max_depth=4,reg_lambda=10.0,scale_pos_weight=5,subsample=0.5)#subsample=0.9, scale_pos_weight=1000,max_depth=4\n",
+    "xgb_clf = xgb.XGBClassifier(random_state=42)\n",
     "xgb_clf.fit(X_train_stander, y_train)#,eval_set=eval_set, eval_metric=['error',\"logloss\",\"aucpr\",\"auc\",],early_stopping_rounds=20)\n",
     "y_pred = xgb_clf.predict(X_test_stander)\n",
     "y_pred_train = xgb_clf.predict(X_train_stander)\n",
